--- a/FF7/Config/DefaultInput.ini
+++ b/FF7/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="LockOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +AxisMappings=(AxisName="Forward / Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Right / Left",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Turn Right / Left Mouse",Scale=1.000000,Key=MouseX)
