--- a/FF7/Config/DefaultEngine.ini
+++ b/FF7/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/JWK/TestMap.TestMap
 EditorStartupMap=/Game/JWK/TestMap.TestMap
+GlobalDefaultGameMode=/Game/KSH/Blueprints/BP_MiddleGameModeBase.BP_MiddleGameModeBase_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
