--- a/FF7/Config/DefaultEngine.ini
+++ b/FF7/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/JWK/TestMap.TestMap
-EditorStartupMap=/Game/JWK/TestMap.TestMap
+GameDefaultMap=/Game/KSH/Maps/MiddleBossMap.MiddleBossMap
+EditorStartupMap=/Game/KSH/Maps/MiddleBossMap.MiddleBossMap
 GlobalDefaultGameMode=/Game/KSH/Blueprints/BP_MiddleGameModeBase.BP_MiddleGameModeBase_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
